--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "node index.js",
-    "build": "rimraf build && babel src -d build src && copyfiles package.json build && copyfiles README.md build"
+    "test": "babel-node index.js",
+    "build": "rimraf build && babel src -d build src && copyfiles package.json build && copyfiles README.md build",
+    "publish-package": "npm run build && cd build && npm publish"
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/register": "^7.4.4"
+    "@babel/register": "^7.4.4",
+    "@babel/cli": "^7.4.4",
+    "@babel/preset-env": "^7.4.4"
   },
   "dependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
+    "@babel/node": "^7.2.2",
     "copyfiles": "^2.1.0",
     "rimraf": "^2.6.3"
   }
